# axum-casbin-auth

./: Cargo.toml  README.md
casbin/: policy.csv
examples/restful_model/: auth.rs  main.rs
src/: lib.rs  middleware.rs
