[package]
name = "axum-casbin-auth"
version = "0.1.0"
edition = "2021"
authors = ["Omprakash Sridharan <omprakashsridharan@outlook.com>"]
license = "Apache-2.0"
description = "Casbin axum access control middleware"
repository = "https://github.com/omprakashsridharan/axum-casbin-auth"
include = ["/src","LICENSE"]
readme = "README.md"

[lib]
name = "axum_casbin_auth"
path = "src/lib.rs"

[dependencies]
casbin = { version = "2.0.9", features=["cached"] }
tokio = "1.20.1"
tower = "0.4.13"
futures = "0.3"
http-body = "0.4.5"
axum = "0.5.15"
pin-project-lite = "0.2.9"
serde = "1.0.143"
serde_json = "1.0.83"

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
