[package]
name = "axum-casbin-auth"
version = "1.0.1"
edition = "2021"
authors = ["Omprakash Sridharan <omprakashsridharan@outlook.com>"]
license = "Apache-2.0"
description = "Casbin axum access control middleware"
repository = "https://github.com/omprakashsridharan/axum-casbin-auth"
include = ["/src","LICENSE"]
readme = "README.md"

[lib]
name = "axum_casbin_auth"
path = "src/lib.rs"

[[bin]]
name="restful"
path ="./examples/restful_model/main.rs"

[dependencies]
casbin = { version = "2.0.9", features=["cached"] }
tokio = { version = "1.20.1", features = [ "full" ] }
tower = "0.4.13"
futures = "0.3"
http-body = "0.4.5"
axum = { version = "0.5.15", features = ["headers"]}
pin-project-lite = "0.2.9"
serde = "1.0.143"
serde_json = "1.0.83"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"

[dev-dependencies]
tokio = { version = "1.20.1", features = [ "full" ] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
