[package]
name = "axum-casbin-auth"
version = "2.0.1"
edition = "2021"
authors = ["Omprakash Sridharan <omprakashsridharan@outlook.com>"]
license = "Apache-2.0"
description = "Casbin axum access control middleware"
repository = "https://github.com/omprakashsridharan/axum-casbin-auth"
include = ["/src", "LICENSE", "/examples/*", "/casbin/*"]
readme = "README.md"

[lib]
name = "axum_casbin_auth"
path = "src/lib.rs"

[[example]]
name = "restful"
path = "./examples/restful_model/main.rs"

[dependencies]
casbin = { version = "2.0.10", features = ["cached"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4.13"
futures = "0.3"
http-body = "1.0"
axum = { version = "0.7" }
pin-project-lite = "0.2.9"
serde = "1.0"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
chrono = "0.4"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"
